--- a/style.css
+++ b/style.css
@@ -1,10 +1,25 @@
 body {
+  background-color: black;
+}
+.canvas-container {
+  width: 100%;
+  height: 100vh;
   display: flex;
   justify-content: center;
-  background-color: black;
+  text-align: center;
+}
+.canvas-container h1 {
+  color: white;
+  margin-top: 4rem;
+  position: absolute;
 }
 canvas {
   border: 2px solid white;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin: auto;
 }
 
 .gameOver {
@@ -24,12 +39,20 @@ canvas {
   width: 400px;
   padding: 10px;
   border-radius: 10px;
+
+  max-width: 400px;
+  width: 400px;
+  padding: 10px;
+  border-radius: 10px;
+  background-color: blue;
+  color: white;
+  height: 50%;
 }
 
 .gameOver .gameOver__container h3 {
   font-weight: 500;
   font-size: 1.5rem;
-  color: navy;
+  color: white;
 }
 
 .gameOver .gameOver__container h1 {
@@ -42,17 +65,117 @@ canvas {
   font-size: 1.1rem;
   margin-top: 0;
 }
-.gameOver__buttons {
+/* .gameOver__buttons {
   display: inline-block;
   justify-content: center;
   text-align: center;
   align-items: center;
 }
-.button {
+.gameOver__buttons .button {
   background-color: navy;
   color: white;
   border: none;
   border-radius: 5px;
   padding: 0.4rem;
   font-size: 0.9rem;
+} */
+
+.gameOver__buttons {
+  display: grid;
+  justify-content: center;
+  text-align: center;
+  align-items: center;
+  background-color: navy;
+  border-radius: 10px;
+  height: 50%;
+  width: 70%;
+  margin: auto;
+  margin-top: 5%;
+}
+.gameOver__buttons button {
+  display: block;
+  justify-content: center;
+  text-align: center;
+  align-items: center;
+  margin: auto;
+  width: 150px;
+  border-radius: 5px;
+  border: none;
+  padding: 5px;
+  background-color: blue;
+  color: white;
+  font-size: 18px;
+  font-weight: 800;
+}
+.gameOver__buttons button:hover {
+  cursor: pointer;
+  background-color: blueviolet;
+}
+.gameMenu {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+}
+.gameMenu__container {
+  max-width: 400px;
+  width: 400px;
+  padding: 10px;
+  border-radius: 10px;
+  background-color: blue;
+  color: white;
+  height: 50%;
+}
+
+.gameMenu .gameMenu__container h3 {
+  font-weight: 500;
+  font-size: 1.5rem;
+  color: gainsboro;
+}
+
+.gameMenu .gameMenu__container h1 {
+  font-weight: 800;
+  font-size: 2.5rem;
+  margin-bottom: 0;
+}
+.gameMenu .gameMenu__container p {
+  font-weight: 50;
+  font-size: 1.1rem;
+  margin-top: 0;
+}
+.gameMenu__buttons {
+  display: grid;
+  justify-content: center;
+  text-align: center;
+  align-items: center;
+  background-color: navy;
+  border-radius: 10px;
+  height: 70%;
+  width: 70%;
+  margin: auto;
+  margin-top: 10%;
+}
+.gameMenu__buttons button {
+  display: block;
+  justify-content: center;
+  text-align: center;
+  align-items: center;
+  margin: auto;
+  width: 150px;
+  border-radius: 5px;
+  border: none;
+  padding: 5px;
+  background-color: blue;
+  color: white;
+  font-size: 18px;
+  font-weight: 800;
+}
+.gameMenu__buttons button:hover {
+  cursor: pointer;
+  background-color: blueviolet;
 }
