--- a/style.css
+++ b/style.css
@@ -10,16 +10,19 @@ body {
 }
 .canvas-container h1 {
   color: white;
-  margin-top: 4rem;
+  margin-top: 1.1rem;
   position: absolute;
+  /* float: right; */
+  font-size: 2rem;
 }
 canvas {
-  border: 2px solid white;
+  border: 2px solid #448fb4;
   top: 0;
   bottom: 0;
   left: 0;
   right: 0;
   margin: auto;
+  border-radius: 5px;
 }
 
 .gameOver {
@@ -32,9 +35,11 @@ canvas {
   align-items: center;
   justify-content: center;
   text-align: center;
+  height: 100vh;
+  /* background-color: red; */
 }
 .gameOver__container {
-  background-color: white;
+  /* background-color: white;
   max-width: 400px;
   width: 400px;
   padding: 10px;
@@ -46,42 +51,41 @@ canvas {
   border-radius: 10px;
   background-color: blue;
   color: white;
-  height: 50%;
-}
+  height: 50%; */
 
+  max-width: 400px;
+  width: 380px;
+  padding: 10px;
+  border-radius: 10px;
+  background-color: #363636;
+  color: white;
+  height: 25rem;
+}
 .gameOver .gameOver__container h3 {
   font-weight: 500;
   font-size: 1.5rem;
   color: white;
+  font-weight: 500;
+  font-size: 1.5rem;
+  color: gainsboro;
+  /* padding: 5px; */
+  width: 100%;
+  border-bottom: 2px solid rgba(68, 143, 180, 0.4);
+  margin-bottom: 0;
 }
-
 .gameOver .gameOver__container h1 {
   font-weight: 800;
   font-size: 2.5rem;
   margin-bottom: 0;
+  margin-top: 0;
 }
 .gameOver .gameOver__container p {
   font-weight: 50;
   font-size: 1.1rem;
   margin-top: 0;
 }
-/* .gameOver__buttons {
-  display: inline-block;
-  justify-content: center;
-  text-align: center;
-  align-items: center;
-}
-.gameOver__buttons .button {
-  background-color: navy;
-  color: white;
-  border: none;
-  border-radius: 5px;
-  padding: 0.4rem;
-  font-size: 0.9rem;
-} */
-
 .gameOver__buttons {
-  display: grid;
+  /* display: grid;
   justify-content: center;
   text-align: center;
   align-items: center;
@@ -90,10 +94,21 @@ canvas {
   height: 50%;
   width: 70%;
   margin: auto;
-  margin-top: 5%;
+  margin-top: 5%; */
+
+  display: grid;
+  justify-content: center;
+  text-align: center;
+  align-items: center;
+  background-color: #4f4f4f;
+  border-radius: 10px;
+  height: 12rem;
+  width: 70%;
+  margin: auto;
+  margin-top: 10%;
 }
 .gameOver__buttons button {
-  display: block;
+  /* display: block;
   justify-content: center;
   text-align: center;
   align-items: center;
@@ -105,12 +120,31 @@ canvas {
   background-color: blue;
   color: white;
   font-size: 18px;
+  font-weight: 800; */
+
+  display: block;
+  justify-content: center;
+  text-align: center;
+  align-items: center;
+  margin: auto;
+  width: 150px;
+  border-radius: 5px;
+  border: none;
+  padding: 5px;
+  background-color: #448fb4;
+  /* background-color: rgba(68, 143, 180, 1); */
+  color: white;
+  font-size: 18px;
   font-weight: 800;
 }
 .gameOver__buttons button:hover {
+  /* cursor: pointer;
+  background-color: blueviolet; */
   cursor: pointer;
-  background-color: blueviolet;
+  background-color: #363636;
+  background-color: rgba(68, 143, 180, 0.5);
 }
+
 .gameMenu {
   position: fixed;
   top: 0;
@@ -121,23 +155,26 @@ canvas {
   align-items: center;
   justify-content: center;
   text-align: center;
+  height: 100vh;
+  /* background-color: red; */
 }
 .gameMenu__container {
   max-width: 400px;
   width: 400px;
   padding: 10px;
   border-radius: 10px;
-  background-color: blue;
+  background-color: #363636;
   color: white;
-  height: 50%;
+  height: 30rem;
 }
-
 .gameMenu .gameMenu__container h3 {
   font-weight: 500;
   font-size: 1.5rem;
   color: gainsboro;
+  padding: 5px;
+  width: 100%;
+  border-bottom: 2px solid rgba(68, 143, 180, 0.2);
 }
-
 .gameMenu .gameMenu__container h1 {
   font-weight: 800;
   font-size: 2.5rem;
@@ -153,7 +190,7 @@ canvas {
   justify-content: center;
   text-align: center;
   align-items: center;
-  background-color: navy;
+  background-color: #4f4f4f;
   border-radius: 10px;
   height: 70%;
   width: 70%;
@@ -170,12 +207,108 @@ canvas {
   border-radius: 5px;
   border: none;
   padding: 5px;
-  background-color: blue;
+  background-color: #448fb4;
+  /* background-color: rgba(68, 143, 180, 1); */
   color: white;
   font-size: 18px;
   font-weight: 800;
 }
 .gameMenu__buttons button:hover {
   cursor: pointer;
+  background-color: #363636;
+  background-color: rgba(68, 143, 180, 0.5);
+}
+
+/* menu desc */
+.menuDescription {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  /* background-color: red; */
+}
+.menuDescription__container {
+  max-width: 400px;
+  width: 340px;
+  padding: 10px;
+  border-radius: 10px;
+  background-color: #363636;
+  background-color: #000000;
+  border: 2px solid #448fb4;
+  color: white;
+  height: 50%;
+}
+
+.menuDescription .menuDescription__container h3 {
+  font-weight: 500;
+  font-size: 1.5rem;
+  color: gainsboro;
+  /* padding: 10px; */
+  /* border-bottom: 2px solid #448fb4; */
+
+  font-weight: 500;
+  font-size: 1.5rem;
+  color: white;
+  font-weight: 500;
+  font-size: 1.5rem;
+  color: gainsboro;
+  padding: 5px;
+  /* width: 100%; */
+  border-bottom: 2px solid rgba(68, 143, 180, 0.2);
+  margin-bottom: 0;
+}
+
+.menuDescription .menuDescription__container h1 {
+  font-weight: 800;
+  font-size: 2.5rem;
+  margin-bottom: 0;
+}
+.menuDescription .menuDescription__container p {
+  font-weight: 50;
+  font-size: 1.1rem;
+  margin-top: 0;
+}
+.menuDescription__list {
+  /* display: flex; */
+  /* justify-content: center; */
+  /* text-align: left; */
+  /* align-items: center; */
+  background-color: #4f4f4f;
+  border-radius: 5px;
+  /* height: 70%; */
+  width: 90%;
+  margin: auto;
+  margin-top: 10%;
+  padding: 30px;
+}
+.menuDescription__list ul {
+  /* display: block; */
+  /* margin-left: -20px; */
+  list-style: none;
+}
+.menuDescription__list button {
+  display: block;
+  /* justify-content: center; */
+  /* text-align: center; */
+  /* align-items: center; */
+  margin: auto;
+  width: 80%;
+  border-radius: 5px;
+  border: none;
+  /* padding: 5px; */
+  background-color: #448fb4;
+  color: white;
+  font-size: 18px;
+  font-weight: 600;
+  margin-top: 2rem;
+}
+.menuDescription__list button:hover {
+  cursor: pointer;
   background-color: blueviolet;
+  background-color: rgba(68, 143, 180, 0.5);
 }
