--- a/style.css
+++ b/style.css
@@ -297,7 +297,7 @@ canvas {
   /* text-align: center; */
   /* align-items: center; */
   margin: auto;
-  width: 80%;
+  width: 100%;
   border-radius: 5px;
   border: none;
   /* padding: 5px; */
@@ -312,3 +312,139 @@ canvas {
   background-color: blueviolet;
   background-color: rgba(68, 143, 180, 0.5);
 }
+
+/* menu setting */
+
+.menuSetting {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+}
+.menuSetting__container {
+  max-width: 400px;
+  width: 340px;
+  padding: 10px;
+  border-radius: 10px;
+  background-color: #363636;
+  background-color: #000000;
+  border: 2px solid #448fb4;
+  color: white;
+  height: 50%;
+}
+
+.menuSetting .menuSetting__container h3 {
+  font-weight: 500;
+  font-size: 1.5rem;
+  color: gainsboro;
+
+  font-weight: 500;
+  font-size: 1.5rem;
+  color: white;
+  font-weight: 500;
+  font-size: 1.5rem;
+  color: gainsboro;
+  padding: 5px;
+  border-bottom: 2px solid rgba(68, 143, 180, 0.2);
+  margin-bottom: 0;
+}
+
+.menuSetting .menuSetting__container .menuSetting__list h1 {
+  font-weight: 500;
+  font-size: 1.1rem;
+}
+.menuSetting__list {
+  background-color: #4f4f4f;
+  border-radius: 5px;
+  margin: auto;
+  margin-top: 1%;
+  padding: 30px;
+  /* text-align: center; */
+  /* align-items: center; */
+  /* align-self: center; */
+}
+.menuSetting__list .menuSetting__list__item {
+  display: flex;
+  justify-content: space-between;
+  padding: 5px;
+}
+.menuSetting__list .menuSetting__list__item p {
+  font-weight: 500;
+}
+
+/* .menuSetting__list div button {
+  display: block;
+  width: 50px;
+  border-radius: 5px;
+  border: none;
+  background-color: #448fb4;
+  color: white;
+  font-size: 18px;
+  font-weight: 600;
+  height: 30px;
+} */
+.menuSetting__list .menuSetting__list__item button:hover {
+  cursor: pointer;
+  opacity: 0.5;
+  /* background-color: blueviolet; */
+  /* background-color: rgba(225, 225, 225, 0.9); */
+}
+.menuSetting__list .button {
+  display: flex;
+  width: 100%;
+  border-radius: 5px;
+  border: none;
+  background-color: #448fb4;
+  color: white;
+  font-size: 18px;
+  font-weight: 600;
+  height: 30px;
+  justify-content: center;
+}
+.menuSetting__list .button:hover {
+  cursor: pointer;
+  background-color: blueviolet;
+  background-color: rgba(68, 143, 180, 0.5);
+}
+
+.btnOff {
+  display: block;
+  width: 50px;
+  border-radius: 5px;
+  border: none;
+  background-color: red;
+  color: white;
+  font-size: 18px;
+  font-weight: 600;
+  height: 30px;
+}
+.btnOn {
+  display: block;
+  width: 50px;
+  border-radius: 5px;
+  border: none;
+  background-color: green;
+  color: white;
+  font-size: 18px;
+  font-weight: 600;
+  height: 30px;
+}
+
+/* #playBackgroundSoundBtn {
+  padding: 10px 20px;
+  font-size: 16px;
+  background-color: #4caf50;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.off {
+  background-color: #f44336;
+} */
